remove edit in feed, adjustment html, display fix password change done

--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1 class="text-center mb-5">Bienvenue sur LITReview</h1>
 <div class="container py-5">
   <div class="row g-4">
     <!-- Colonne Inscription -->
