--- a/authentication/templates/authentication/password_change_done.html
+++ b/authentication/templates/authentication/password_change_done.html
@@ -1,6 +1,14 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<h1>Vous avez bien changé votre mot de passe</h1>
-<p>Retourner à votre page d'accueil en cliquant <a href="{% url 'home' %}">ici</a></p>
+<div class="container mt-5">
+  <div class="alert alert-success text-center" role="alert">
+    <h1 class="mb-0">Vous avez changé votre mot de passe</h1>
+  </div>
+  <p class="text-center">
+    Retournez à votre page d'accueil en cliquant 
+    <a href="{% url 'home' %}" class="btn btn-primary">
+      ici
+    </a>
+  </p>
+</div>
 {% endblock %}
