--- a/authentication/templates/authentication/registration.html
+++ b/authentication/templates/authentication/registration.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-5" style="max-width: 500px;">
-  <h2>Changement de mot de passe</h2>
+  <h1>Changer votre mot de passe</h1>
   <form action="" method="post">
     {% csrf_token %}
     <div class="mb-3">
