--- a/blog/templates/blog/follow_users_form.html
+++ b/blog/templates/blog/follow_users_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h3 class="my-4 text-center">Suivre des utilisateurs</h3>
+  <h1 class="my-4 text-center">Suivre des utilisateurs</h1>
   <div class="mb-4 row">
     <form action="" method="post">
       {{ form.as_p }}
@@ -8,7 +8,7 @@
       <button class="btn btn-primary" type="submit">Suivre</button>
     </form>
   </div>
-    <h3 class="mt-5 mb-4 text-center">Abonnements</h3>
+    <h2 class="mt-5 mb-4 text-center">Abonnements</h2>
   <div class="table-responsive">
     <table class="table table-striped table-hover align-middle">
       <thead class="table-light">
@@ -29,12 +29,12 @@
             {% if follow in user.blocked.all %}
               <form method="post" action="{% url 'unblock_user' follow.id %}" class="d-inline">
                 {% csrf_token %}
-                <button class="btn btn-outline-danger btn-sm" type="submit">débloquer</button>
+                <button class="btn btn-outline-success btn-sm" type="submit">débloquer</button>
               </form>
             {% else %}
               <form method="post" action="{% url 'block_user' follow.id %}" class="d-inline">
                 {% csrf_token %}
-                <button class="btn btn-outline-success btn-sm" type="submit">Bloquer</button>
+                <button class="btn btn-outline-danger btn-sm" type="submit">Bloquer</button>
               </form>
             {% endif %}
           </td>
@@ -49,7 +49,7 @@
   </div>
 
   <!-- Followers list -->
-  <h3 class="mt-5 mb-4 text-center">Abonnés</h3>
+  <h2 class="mt-5 mb-4 text-center">Abonnés</h2>
   <div class="list-group">
     {% for follower in user.followers.all %}
     <div class="list-group-item d-flex align-items-center justify-content-between">
@@ -57,12 +57,12 @@
       {% if follower in user.blocked.all %}
         <form method="post" action="{% url 'unblock_user' follower.id %}" class="d-inline">
           {% csrf_token %}
-          <button class="btn btn-outline-danger btn-sm" type="submit">débloquer</button>
+          <button class="btn btn-outline-success btn-sm" type="submit">débloquer</button>
         </form>
       {% else %}
         <form method="post" action="{% url 'block_user' follower.id %}" class="d-inline">
           {% csrf_token %}
-          <button class="btn btn-outline-success btn-sm" type="submit">Bloquer</button>
+          <button class="btn btn-outline-danger btn-sm" type="submit">Bloquer</button>
         </form>
       {% endif %}
     </div>
