--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,8 @@
   <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body class="d-flex flex-column min-vh-100">
-
   <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light>
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}">LITRevu</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -27,10 +26,30 @@
       <div class="collapse navbar-collapse" id="mainNavbar">
         {% if user.is_authenticated %}
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Flux</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'posts' %}">Posts</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'follow_users' %}">Suivre</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'home' %}">Flux</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'posts' %}">Posts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'follow_users' %}">Suivre</a>
+            </li>
           </ul>
+
+          <div class="d-flex align-items-center me-3">
+            {% if user.profile_photo %}
+              <img src="{{ user.profile_photo.url }}" alt="Avatar" class="rounded-circle me-2" width="40" height="40">
+            {% else %}
+              <img src="{% static 'images/default_profile.png' %}" alt="Avatar" class="rounded-circle me-2" width="40" height="40">
+            {% endif %}
+            <span class="me-3">Salut, {{ user.username }} !</span>
+            <a href="{% url 'profile_photo_upload' %}"
+               class="btn btn-sm btn-outline-primary me-2" title="Changer la photo">Photo</a>
+            <a href="{% url 'password_change' %}"
+               class="btn btn-sm btn-outline-secondary me-3" title="Changer le mot de passe">Mot de passe</a>
+          </div>
+
           <form class="d-flex" action="{% url 'logout' %}" method="post">
             {% csrf_token %}
             <button class="btn btn-outline-danger" type="submit">Se déconnecter</button>
@@ -48,24 +67,7 @@
   <!-- FOOTER -->
   <footer class="bg-light text-center text-lg-start mt-auto py-3 border-top">
     <div class="container d-flex flex-column flex-lg-row align-items-center justify-content-between">
-      {% if user.is_authenticated %}
-        <div class="d-flex align-items-center mb-3 mb-lg-0">
-          {% if user.profile_photo %}
-            <img src="{{ user.profile_photo.url }}" alt="Avatar"
-                 class="rounded-circle me-2" width="40" height="40">
-          {% else %}
-            <img src="{% static 'images/default_profile.png' %}" alt="Avatar"
-                 class="rounded-circle me-2" width="40" height="40">
-          {% endif %}
-          <span>Salut, {{ user.username }} !</span>
-        </div>
-        <div>
-          <a href="{% url 'profile_photo_upload' %}" class="btn btn-sm btn-outline-primary me-2">Photo</a>
-          <a href="{% url 'password_change' %}" class="btn btn-sm btn-outline-secondary">Mot de passe</a>
-        </div>
-      {% else %}
-        <span class="text-muted">© {{ now.year }} LITRevu</span>
-      {% endif %}
+        <span class="text-muted">©LITReview</span>
     </div>
   </footer>
 
