--- a/blog/templates/blog/partials/ticket_snippet.html
+++ b/blog/templates/blog/partials/ticket_snippet.html
@@ -12,21 +12,23 @@
              class="rounded-circle me-2" width="40" height="40">
       {% endif %}
       <small class="text-muted">
-        Auteur : {% get_poster_display ticket.user %}
+        {% get_poster_display ticket.user %}  demandé une critique
+        {% get_posted_at_display ticket.time_created as posted_msg %}
+        {{ posted_msg }}
+        {% get_updated_at_display ticket.time_created ticket.update_at as update_msg %}
+        {% if update_msg %}
+          · {{ update_msg }}
+        {% endif %}
       </small>
     </div>
-
-    <h5 class="card-title">{{ ticket.title }}</h5>
+    <a href="{% url 'view-ticket' ticket.id %}" class="text-decoration-none">
+      <h5 class="card-title">{{ ticket.title }}</h5>
+    </a>
     <p class="card-text">{{ ticket.description }}</p>
 
     <p class="card-text">
       <small class="text-muted">
-        {% get_posted_at_display ticket.time_created as posted_msg %}
-        {{ posted_msg }}
-        {% get_updated_at_display ticket.time_created ticket.update_at as updated_msg %}
-        {% if updated_msg %}
-          · {{ updated_msg }}
-        {% endif %}
+
       </small>
     </p>
 
