--- a/blog/templates/blog/view_ticket.html
+++ b/blog/templates/blog/view_ticket.html
@@ -3,10 +3,9 @@
   <div class="container py-5">
     <div class="row justify-content-center">
       <div class="col-lg-8">
-        <h1 class="display-6 mb-4">Critique</h1>
-        {% include 'blog/partials/review_snippet.html' with review=review %}
+        <h1 class="display-6 mb-4">Billet</h1>
+        {% include 'blog/partials/ticket_snippet.html' with ticket=ticket %}
       </div>
     </div>
   </div>
 {% endblock content %}
-
