--- a/blog/templates/blog/partials/review_snippet.html
+++ b/blog/templates/blog/partials/review_snippet.html
@@ -13,10 +13,10 @@
       {% endif %}
       <div>
         <a href="{% url 'view-review' review.id %}" class="text-decoration-none">
-          <h5 class="card-title mb-0">{{ review.ticket.title }}</h5>
+          <h5 class="card-title mb-0">{{ review.headline }}</h5>
         </a>
         <small class="text-muted">
-          {% get_poster_display review.user %} · 
+          {% get_poster_display review.user %} publié une critique 
           {% get_posted_at_display review.time_created as posted_msg %}
           {{ posted_msg }}
 
@@ -41,7 +41,7 @@
 
 
     <p class="mb-1"><strong>{{ review.rating }}/5</strong></p>
-    <h6 class="mb-3">{{ review.headline }}</h6>
+    <h6 class="mb-3">{{ review.body }}</h6>
 
     {% if show_edit and review|is_author:user %}
       <a href="{% url 'edit_review' review.id %}"
