--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="{% url 'home' %}">Flux</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'posts' %}">Posts</a>
+              <a class="nav-link" href="{% url 'posts' %}">Mes Posts</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'follow_users' %}">Suivre</a>
